--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.28)
 project(Sekaiju)
 
 add_subdirectory("MIDIIO")
+add_subdirectory("MIDIData")
 add_subdirectory("Sekaiju")
