MIDIStatus: initial build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ project(Sekaiju)
 add_subdirectory("MIDIIO")
 add_subdirectory("MIDIData")
 add_subdirectory("MIDIClock")
+add_subdirectory("MIDIStatus")
 add_subdirectory("Sekaiju")
