--- a/Sekaiju/CMakeLists.txt
+++ b/Sekaiju/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_MFC_FLAG 2)
 target_link_libraries(Sekaiju PRIVATE MIDIIO)
 target_link_libraries(Sekaiju PRIVATE MIDIData)
 target_link_libraries(Sekaiju PRIVATE MIDIClock)
+target_link_libraries(Sekaiju PRIVATE MIDIStatus)
 
 target_sources(
     Sekaiju
