MIDIInstrument: initial build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory("MIDIIO")
 add_subdirectory("MIDIData")
 add_subdirectory("MIDIClock")
 add_subdirectory("MIDIStatus")
+add_subdirectory("MIDIInstrument")
 add_subdirectory("Sekaiju")
