IniData: initial build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory("MIDIData")
 add_subdirectory("MIDIClock")
 add_subdirectory("MIDIStatus")
 add_subdirectory("MIDIInstrument")
+add_subdirectory("IniData")
 add_subdirectory("Sekaiju")
