--- a/Sekaiju/CMakeLists.txt
+++ b/Sekaiju/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(Sekaiju PRIVATE MIDIData)
 target_link_libraries(Sekaiju PRIVATE MIDIClock)
 target_link_libraries(Sekaiju PRIVATE MIDIStatus)
 target_link_libraries(Sekaiju PRIVATE MIDIInstrument)
+target_link_libraries(Sekaiju PRIVATE IniData)
 
 target_sources(
     Sekaiju
