--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,25 @@ add_subdirectory("MIDIStatus")
 add_subdirectory("MIDIInstrument")
 add_subdirectory("IniData")
 add_subdirectory("Sekaiju")
+
+install(
+    TARGETS
+    Sekaiju
+    # Dependencies
+    MIDIIO MIDIData MIDIClock MIDIStatus MIDIInstrument IniData
+    # Resources
+    SekaijuJpn SekaijuEnu SekaijuChs
+    DESTINATION .
+)
+
+install(
+    DIRECTORY
+    Sekaiju/instrument
+    DESTINATION .
+)
+
+install(
+    FILES
+    Sekaiju/Sekaiju.ini
+    DESTINATION .
+)
