SekaijuRes: compile with UNICODE, _UNICODE

--- a/Sekaiju/SekaijuRes/CMakeLists.txt
+++ b/Sekaiju/SekaijuRes/CMakeLists.txt
@@ -4,11 +4,14 @@
 add_library(SekaijuJpn SHARED)
 target_sources(SekaijuJpn PRIVATE SekaijuJpn.rc)
 target_link_options(SekaijuJpn PRIVATE "/NOENTRY")
+target_compile_definitions(SekaijuJpn PRIVATE _UNICODE UNICODE)
 
 add_library(SekaijuEnu SHARED)
 target_sources(SekaijuEnu PRIVATE SekaijuEnu.rc)
 target_link_options(SekaijuEnu PRIVATE "/NOENTRY")
+target_compile_definitions(SekaijuEnu PRIVATE _UNICODE UNICODE)
 
 add_library(SekaijuChs SHARED)
 target_sources(SekaijuChs PRIVATE SekaijuChs.rc)
 target_link_options(SekaijuChs PRIVATE "/NOENTRY")
+target_compile_definitions(SekaijuChs PRIVATE _UNICODE UNICODE)
